@startuml

title __SERVER's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.FileTransfer {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Server {
    }
  }
  

  sample.Controller o-- sample.Server : server
  sample.Main -up-|> javafx.application.Application
  sample.Server o-- sample.Controller : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
